force-app/main/default/objects/Account/fields/NumberOfBoughtCars__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBoughtCars__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NumberOfBoughtCars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>