force-app/main/default/objects/Account/fields/Profits_Of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Profits_Of_Contacts__c</fullName>
    <label>Profits Of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>