force-app/main/default/objects/Account/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>